--- a/caffhheiene/package.json
+++ b/caffhheiene/package.json
@@ -9,6 +9,8 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@heroicons/react": "^2.1.1",
+    "@svgr/webpack": "^8.1.0",
     "next": "14.0.4",
     "react": "^18",
     "react-dom": "^18"
@@ -27,8 +29,14 @@
     "eslint-config-prettier": "^9.1.0",
     "postcss": "^8",
     "prettier": "^3.2.4",
+    "prettier-plugin-tailwindcss": "^0.5.11",
     "tailwindcss": "^3.3.0",
     "typescript": "^5"
   },
-  "packageManager": "yarn@4.0.2"
+  "packageManager": "yarn@4.0.2",
+  "dependenciesMeta": {
+    "prettier-plugin-tailwindcss@0.5.11": {
+      "unplugged": true
+    }
+  }
 }
